# kibana-plugins-rs

./: .eslintrc.js  .i18nrc.json  Cargo.toml  README.md  kibana.json  package.json
wasm/kibana_core_types/: Cargo.toml
wasm/kibana_core_types/src/: lib.rs  public.rs  server.rs
wasm/kibana_core_types/src/public/: http.rs
wasm/kibana_core_types/src/public/core/: core_setup.rs
wasm/kibana_core_types/src/public/http/: http_setup.rs
wasm/kibana_core_types/src/server/: core.rs  elasticsearch.rs  http.rs  logging.rs  packages.rs  plugins.rs
wasm/kibana_core_types/src/server/elasticsearch/: elasticsearch_client.rs  scoped_elasticsearch_client.rs
wasm/kibana_core_types/src/server/http/: base_path.rs  router.rs
wasm/kibana_core_types/src/server/http/router/: request.rs  request_context.rs  request_handler.rs  response.rs  response_factory.rs  route_config.rs
wasm/kibana_core_types/src/server/logging/: logger.rs
wasm/kibana_core_types/src/server/plugins/: plugin_intitializer_context.rs
wasm/kibana_plugin_common/: Cargo.toml
workspace/kibana_core_types/: Cargo.toml  LICENSE
workspace/kibana_core_types/src/: lib.rs
workspace/kibana_core_types/src/public/: http.rs
workspace/kibana_core_types/src/public/http/: base_path.rs
workspace/kibana_core_types/src/server/: http.rs
workspace/kibana_core_types/src/server/elasticsearch/: elasticsearch_client.rs
workspace/kibana_core_types/src/server/http/: http_setup.rs
workspace/kibana_core_types/src/server/http/router/: request_context.rs  (+3 more)
workspace/kibana_core_types/src/server/logging/: logger_factory.rs
(+44 files in other folders)
