[package]
name = "kibana-core-types"
version = "0.1.0"
authors = ["Aleh Zasypkin"]
description = "Types exposed by the Kibana Core"
repository = "https://github.com/azasypkin/kibana-plugins-rs"
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.79"

[features]
server = []
public = []
