[package]
name = "kibana-plugin-common"
version = "0.1.0"
authors = ["Aleh Zasypkin"]
description = "Example Kibana plugin written in Rust programming language (Common)"
repository = "https://github.com/azasypkin/kibana-plugins-rs"
license = ""
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.79"
strsim = "0.10.0"
serde = "1.0.135"
serde_derive = "1.0.135"

[features]
default = [
  "serde/derive",
  "wasm-bindgen/serde-serialize"
]
