[package]
name = "kibana-core-types"
version = "0.1.0"
authors = ["Aleh Zasypkin"]
description = "Types exposed by the Kibana Core"
repository = "https://github.com/azasypkin/kibana-plugins-rs"
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
either = "1.6.1"
js-sys = "0.3.56"
serde = "1.0.135"
serde_derive = "1.0.135"
wasm-bindgen = "0.2.79"
wasm-bindgen-futures = "0.4.29"

[features]
default = [
    "serde/derive",
    "wasm-bindgen/serde-serialize"
]
server = []
public = []
